5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1836_1274.log
== TEST (2019-06-26 22:12:45) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

i=0
j=0
for i in range(N):
	for j in range(N):
		mat[i,j]=1
		mat[j,i]=1
		if(i==j):
			mat[i,j]=i[i]+1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:12:59) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

i=0
j=0
for i in range(N):
	for j in range(N):
		mat[i,j]=1
		mat[j,i]=1
		if(i==j):
			mat[i,j]=i+1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:23:55) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

x=0
for i in range(N):
	for j in range(N):
		if(i<j):
			mat[1,j]=1
			mat[2,j]=2
			mat[3,j]=3
			mat[4,j]=4
		elif(i>j):
			mat[1,j]=1
			mat[2,j]=2
			mat[3,j]=3
			mat[4,j]=4
			mat[5,j]=5			
		else:
			mat[i,j]=i[x]+1	
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:24:24) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

x=0
for i in range(N):
	for j in range(N):
		if(i<j):
			mat[1,j]=1
			mat[2,j]=2
			mat[3,j]=3
			mat[4,j]=4
		elif(i>j):
			mat[1,j]=1
			mat[2,j]=2
			mat[3,j]=3
			mat[4,j]=4
			mat[5,j]=5			
		else:
			mat[i,j]=x[i]+1	
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:24:41) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

x=0
for i in range(N):
	for j in range(N):
		if(i<j):
			mat[1,j]=1
			mat[2,j]=2
			mat[3,j]=3
			mat[4,j]=4
		elif(i>j):
			mat[1,j]=1
			mat[2,j]=2
			mat[3,j]=3
			mat[4,j]=4
			mat[5,j]=5			
		else:
			mat[i,j]=i+1	
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:25:53) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

x=0
for i in range(N):
	for j in range(N):
		if(i<j):
			mat[1,j]=1
			mat[2,j]=2
			mat[3,j]=3
			mat[4,j]=4
		elif(i>j):
			mat[1,j]=1
			mat[2,j]=2
			mat[3,j]=3
			mat[4,j]=4
			
		else:
			mat[i,j]=i+1	
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:30:32) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

x=0
for i in range(N):
	for j in range(N):
		if(i<j):
			mat[1,j]=1
			mat[2,j]=2
			mat[3,j]=3
			mat[4,j]=4			
		else:
			mat[i,j]=i+1	
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:31:33) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

for i in range(N):
	if(i<j):
			mat[1,j]=1
			mat[2,j]=2
			mat[3,j]=3
			mat[4,j]=4			
		else:
			mat[i,j]=i+1	
	for j in range(N):
		if(i<j):
			mat[1,j]=1
			mat[2,j]=2
			mat[3,j]=3
			mat[4,j]=4			
		else:
			mat[i,j]=i+1	
			
print(mat)	
	
-- ERROR:
File "XXXX", line 12
    else:
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:32:35) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

for i in range(N):
	if(i<j):
			mat[i,1]=1
			mat[i,2]=2
			mat[i,3]=3
			mat[i,4]=4			
		else:
			mat[j,i]=j+1	
	for j in range(N):
		if(i<j):
			mat[1,j]=1
			mat[2,j]=2
			mat[3,j]=3
			mat[4,j]=4			
		else:
			mat[i,j]=i+1	
			
print(mat)	
	
-- ERROR:
File "XXXX", line 12
    else:
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:32:55) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

for i in range(N):
	if(i<j):
			mat[i,1]=1
			mat[i,2]=2
			mat[i,3]=3
			mat[i,4]=4			
		else:
			mat[i,j]=j+1	
	for j in range(N):
		if(i<j):
			mat[1,j]=1
			mat[2,j]=2
			mat[3,j]=3
			mat[4,j]=4			
		else:
			mat[i,j]=i+1	
			
print(mat)	
	
-- ERROR:
File "XXXX", line 12
    else:
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:33:07) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

for i in range(N):
	if(i<j):
			mat[i,1]=1
			mat[i,2]=2
			mat[i,3]=3
			mat[i,4]=4			
	
	for j in range(N):
		if(i<j):
			mat[1,j]=1
			mat[2,j]=2
			mat[3,j]=3
			mat[4,j]=4			
		else:
			mat[i,j]=i+1	
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:33:21) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

for i in range(N):
	if(i>j):
			mat[i,1]=1
			mat[i,2]=2
			mat[i,3]=3
			mat[i,4]=4			
	
	for j in range(N):
		if(i<j):
			mat[1,j]=1
			mat[2,j]=2
			mat[3,j]=3
			mat[4,j]=4			
		else:
			mat[i,j]=i+1	
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:33:34) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

for i in range(N):	
	for j in range(N):
		if(i<j):
			mat[1,j]=1
			mat[2,j]=2
			mat[3,j]=3
			mat[4,j]=4			
		else:
			mat[i,j]=i+1	
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:06:24) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

for i in range(N):	
	for j in range(N):
		if(i<j):
			mat[1,j]=1
			mat[2,j]=2
			mat[3,j]=3
			mat[4,j]=4			
		else:
			mat[i,j]=i+1	
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:06:43) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

for i in range(N):	
	for j in range(N):
		if(i>j):
			mat[1,j]=1
			mat[2,j]=2
			mat[3,j]=3
			mat[4,j]=4			
		else:
			mat[i,j]=i+1	
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:09:46) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

for i in range(N):	
	for j in range(N):
		mat[i,j]=1
		mat[j,i]=1
		#if(i>j):
			#mat[1,j]=1
			#mat[2,j]=2
			#mat[3,j]=3
			#mat[4,j]=4			
		#else:
			#mat[i,j]=i+1	
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:10:12) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

for i in range(N):	
	for j in range(N):
		mat[i,j]=1
		#if(i>j):
			#mat[1,j]=1
			#mat[2,j]=2
			#mat[3,j]=3
			#mat[4,j]=4			
		#else:
			#mat[i,j]=i+1	
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:13:58) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

for i in range(N):	
	for j in range(N):
		if(i>j):
			mat[1,j]=1
			mat[2,j]=2
			mat[3,j]=3
			mat[4,j]=4			
		
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:14:33) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

for i in range(N):	
	for j in range(N):
		if(i>j):
			mat[1,j]=1
			mat[2,j]=2
			mat[3,j]=3
			mat[4,j]=4
			mat[5,j]=5
		
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:14:59) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

for i in range(N):	
	for j in range(N):
		if(i>j):
			mat[1,j]=1
			mat[2,j]=2
			mat[3,j]=3
			mat[4,j]=4			
		
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:15:18) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

for i in range(N):	
	for j in range(N):
		if(i<j):
			mat[1,j]=1
			mat[2,j]=2
			mat[3,j]=3
			mat[4,j]=4			
		
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:15:57) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

for i in range(N):	
	for j in range(N):
		mat[i,j]=1
		if(i<j):
			mat[1,j]=1
			mat[2,j]=2
			mat[3,j]=3
			mat[4,j]=4			
		
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:21:22) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

for i in range(N):
	mat[i,j]=1
	for j in range(N):
		
		if(i<j):
			mat[1,j]=1
			mat[2,j]=2
			mat[3,j]=3
			mat[4,j]=4			
		
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:22:27) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

for i in range(N):
	for j in range(N):
		if(i<j):
			mat[i,1]=1
			mat[i,2]=2
			mat[i,3]=3
			mat[i,4]=4			
		
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:23:24) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

for i in range(N):
	for j in range(N):
		if(i<j):
			mat[i,0]=1
			mat[i,1]=2
			mat[i,2]=3
			mat[i,3]=4
			mat[i,4]=5			
		
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:25:31) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

for i in range(N):
	for j in range(N):
		if(i<j):
			mat[i,0]=1
			mat[0,j]=1
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:25:51) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

for i in range(N):
	for j in range(N):
		if(i<j):
			mat[i,0]=1
			
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:26:21) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

for i in range(N):
	for j in range(N):
		if(i<j):
			mat[i,:]=1
			
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:27:33) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

for i in range(N):
	for j in range(N):
		mat[i,0]=1
		mat[0,j]=1
			
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:28:39) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

for i in range(N):
	for j in range(N):
		mat[i,0]=1
		mat[0,j]=1
		mat[i,1]=2
		mat[1,j]=2
			
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:29:53) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

for i in range(N):
	for j in range(N):
		mat[i,0]=1
		mat[0,j]=1
		
		mat[1,j]=2
			
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:30:09) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

for i in range(N):
	for j in range(N):
		mat[i,0]=1
		mat[0,j]=1
		mat[i,1]=2
		
			
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:36:05) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

for i in range(N):
	for j in range(N):
		mat[i,0]=1
		mat[0,j]=1
		if(i<j):
			mat[1,j]=2
			mat[2,j]=3
			mat[3,j]=4
			
			
	
		
			
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:36:54) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

for i in range(N):
	for j in range(N):
		mat[i,0]=1
		mat[0,j]=1
		if(i<j):
			mat[1,j]=2
			mat[2,j]=3
			mat[3,j]=4
			mat[4,j]=5
			
			
	
		
			
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:40:03) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

for i in range(N):
	for j in range(N):
		mat[i,0]=1
		mat[0,j]=1
		if(i<j):
			mat[1,j]=2
			mat[2,j]=3
			mat[3,j]=4
			mat[4,j]=5
		elif(i>j):
			mat[i,1]=2
			mat[i,2]=3
			mat[i,3]=4
			mat[i,4]=5
			
			
			
	
		
			
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 16:40:15) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

for i in range(N):
	for j in range(N):
		mat[i,0]=1
		mat[0,j]=1
		if(i<j):
			mat[1,j]=2
			mat[2,j]=3
			mat[3,j]=4
			mat[4,j]=5
		elif(i>j):
			mat[i,1]=2
			mat[i,2]=3
			mat[i,3]=4
			mat[i,4]=5
			
			
			
	
		
			
			
print(mat)	
	
-- EXECUTION TIME:
1.11312
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1274/main.py", line 13, in <module>
    mat[3,j]=4
IndexError: index 3 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:40:22) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

for i in range(N):
	for j in range(N):
		mat[i,0]=1
		mat[0,j]=1
		if(i<j):
			mat[1,j]=2
			mat[2,j]=3
			mat[3,j]=4
			mat[4,j]=5
		elif(i>j):
			mat[i,1]=2
			mat[i,2]=3
			mat[i,3]=4
			mat[i,4]=5
			
			
			
	
		
			
			
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:42:14) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

if(N>=1):
for i in range(N):
	for j in range(N):
		mat[i,0]=1
		mat[0,j]=1
		if(i<j):
			mat[1,j]=2
			mat[2,j]=3
			mat[3,j]=4
			mat[4,j]=5
		elif(i>j):
			mat[i,1]=2
			mat[i,2]=3
			mat[i,3]=4
			mat[i,4]=5
			
			
			
	
		
			
			
print(mat)	
	
-- ERROR:
File "XXXX", line 7
    for i in range(N):
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:43:47) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

if(N>=1):
	for i in range(N):
		for j in range(N):
			mat[i,0]=1
		   mat[0,j]=1
			if(i<j):
				mat[1,j]=2
			   mat[2,j]=3
			   mat[3,j]=4
			   mat[4,j]=5
		   elif(i>j):
			   mat[i,1]=2
			   mat[i,2]=3
			   mat[i,3]=4
			   mat[i,4]=5
			 	
			
print(mat)	
	
-- ERROR:
File "XXXX", line 10
    mat[0,j]=1
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:43:51) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)

if(N>=1):
	for i in range(N):
		for j in range(N):
			mat[i,0]=1
		   mat[0,j]=1
			if(i<j):
				mat[1,j]=2
			   mat[2,j]=3
			   mat[3,j]=4
			   mat[4,j]=5
		   elif(i>j):
			   mat[i,1]=2
			   mat[i,2]=3
			   mat[i,3]=4
			   mat[i,4]=5
			 	
			
print(mat)	
	
-- ERROR:
File "XXXX", line 10
    mat[0,j]=1
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 16:44:21) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)


for i in range(N):
	for j in range(N):
		mat[i,0]=1
		mat[0,j]=1
		if(i<j):
			mat[1,j]=2
			mat[2,j]=3
			mat[3,j]=4
			mat[4,j]=5
		elif(i>j):
			mat[i,1]=2
			mat[i,2]=3
			mat[i,3]=4
			mat[i,4]=5
			
			
			
	
		
			
			
print(mat)	
	
-- EXECUTION TIME:
1.15103
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1274/main.py", line 14, in <module>
    mat[3,j]=4
IndexError: index 3 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 16:44:35) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)


for i in range(N):
	for j in range(N):
		mat[i,0]=1
		mat[0,j]=1
		if(i<j):
			mat[1,j]=2
			mat[2,j]=3
			mat[3,j]=4
			mat[4,j]=5
		elif(i>j):
			mat[i,1]=2
			mat[i,2]=3
			mat[i,3]=4
			mat[i,4]=5
					
print(mat)	
	
-- EXECUTION TIME:
1.24099
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1274/main.py", line 14, in <module>
    mat[3,j]=4
IndexError: index 3 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:44:45) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)


for i in range(N):
	for j in range(N):
		mat[i,0]=1
		mat[0,j]=1
		if(i<j):
			mat[1,j]=2
			mat[2,j]=3
			mat[3,j]=4
			mat[4,j]=5
		elif(i>j):
			mat[i,1]=2
			mat[i,2]=3
			mat[i,3]=4
			mat[i,4]=5
					
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 16:44:45) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)


for i in range(N):
	for j in range(N):
		mat[i,0]=1
		mat[0,j]=1
		if(i<j):
			mat[1,j]=2
			mat[2,j]=3
			mat[3,j]=4
			mat[4,j]=5
		elif(i>j):
			mat[i,1]=2
			mat[i,2]=3
			mat[i,3]=4
			mat[i,4]=5
					
print(mat)	
	
-- EXECUTION TIME:
1.18625
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1274/main.py", line 14, in <module>
    mat[3,j]=4
IndexError: index 3 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:46:07) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)


for i in range(N):
	for j in range(N):
		mat[i,0]=1
		mat[0,j]=1
		if(i<j):
		   mat[i,j]=j+1
		elif(i>j):
			mat[i,j]=i+1
					
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:46:42) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)


for i in range(N):
	for j in range(N):
		mat[i,0]=1
		mat[0,j]=1
		if(i<j):
		   mat[i,j]=i+1
		#elif(i>j):
			#mat[i,j]=i+1
					
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:47:51) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)


for i in range(N):
	for j in range(N):
		mat[i,0]=1
		mat[0,j]=1
		#if(i<j):
		   #mat[i,j]=i+1
		if(i>j):
			mat[i,j]=j+1
					
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:48:33) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)


for i in range(N):
	for j in range(N):
		mat[i,0]=1
		mat[0,j]=1
		if(i<j):
		   mat[i,j]=i+1
		elif(i>j):
			mat[i,j]=j+1
					
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:49:42) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)


for i in range(N):
	for j in range(N):
		mat[i,0]=1
		mat[0,j]=1
		if(i<j):
		   mat[i,j]=i+1
		elif(i>j):
			mat[i,j]=j+1
		else:
			mat[i,j]=i+1
			
					
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 16:49:54) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)


for i in range(N):
	for j in range(N):
		mat[i,0]=1
		mat[0,j]=1
		if(i<j):
		   mat[i,j]=i+1
		elif(i>j):
			mat[i,j]=j+1
		else:
			mat[i,j]=i+1
			
					
print(mat)	
	
-- EXECUTION TIME:
1.29214
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:50:56) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)


for i in range(N):
	for j in range(N):
		mat[i,0]=1
		mat[0,j]=1
		if(i<j):
		   mat[i,j]=i+1
		elif(i>j):
			mat[i,j]=j+1
		else:
			mat[i,j]=i+1
			
					
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:51:49) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)


for i in range(N):
	for j in range(N):
		mat[i,0]=1
		mat[0,j]=1
		if(i<j and i==j):
		   mat[i,j]=i+1
		elif(i>j):
			mat[i,j]=j+1
		#else:
			#mat[i,j]=i+1
			
					
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:52:26) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)


for i in range(N):
	for j in range(N):
		mat[i,0]=1
		mat[0,j]=1
		if(i<j or i==j):
		   mat[i,j]=i+1
		elif(i>j):
			mat[i,j]=j+1
		#else:
			#mat[i,j]=i+1
			
					
print(mat)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 16:52:40) 
-- CODE:
from numpy import*
N = int(input("Dimensao da matriz: "))

mat= zeros((N,N),dtype=int)


for i in range(N):
	for j in range(N):
		mat[i,0]=1
		mat[0,j]=1
		if(i<j or i==j):
		   mat[i,j]=i+1
		elif(i>j):
			mat[i,j]=j+1
		#else:
			#mat[i,j]=i+1
			
					
print(mat)	
	
-- EXECUTION TIME:
1.12699
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
